feat(Image): add image alignment option

--- a/css/src/components/insert.css
+++ b/css/src/components/insert.css
@@ -20,7 +20,7 @@
   box-sizing: border-box;
 }
 
-.Editor-image-delete {
+.Editor-image-options {
   height: 48px;
   width: 48px;
   display: flex;
