--- a/css/src/components/editor.css
+++ b/css/src/components/editor.css
@@ -3,6 +3,7 @@
   margin-top: var(--spacing);
   margin-bottom: var(--spacing);
   margin-left: var(--spacing-l);
+  padding: 0 !important;
 }
 
 .Editor p {
