fix(preview): add support to handle whitespaces

--- a/css/src/components/editor.css
+++ b/css/src/components/editor.css
@@ -53,6 +53,10 @@
   border-radius: var(--spacing-m);
 }
 
+.Preview-wrapper {
+  white-space: break-spaces;
+}
+
 figure {
   margin: 0;
   padding: 0;
